fix overflow on home

--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  width: 100vw;
+  width: 100vw !important;
 }
 
 @layer utilities {
